@@ -8,6 +8,8 @@ import org.springframework.data.domain.Sort;
 import org.springframework.format.annotation.DateTimeFormat;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
+import org.springframework.security.core.Authentication;
+import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Controller;
 import org.springframework.ui.Model;
 import org.springframework.web.bind.annotation.*;
@@ -23,7 +25,10 @@ import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.nio.file.StandardCopyOption;
+import java.text.SimpleDateFormat;
+import java.time.LocalDate;
 import java.util.*;
+import java.util.stream.Collectors;
 
 @Controller
 @RequestMapping("/sanpham")
@@ -42,65 +47,79 @@ public class SanPhamController {
     private SizeService sizeService;
     @Autowired
     private MauSacService mauSacService;
+    @Autowired
+    private NhanVienService nhanVienService;
+
+    public String getCurrentUserEmail() {
+        Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
+        if (authentication != null && authentication.isAuthenticated()) {
+            return authentication.getName(); // Trả về email của người dùng đã đăng nhập
+        }
+        return null; // Nếu chưa đăng nhập, trả về null hoặc giá trị mặc định
+    }
 
 
     @GetMapping("/hienthi")
-    public String hienThi(Model model,
-                          @RequestParam(defaultValue = "0") int page,
-                          @RequestParam(required = false) String keyword,
-                          @RequestParam(required = false) @DateTimeFormat(pattern = "yyyy-MM-dd") Date startDate,
-                          @RequestParam(required = false) @DateTimeFormat(pattern = "yyyy-MM-dd") Date endDate) {
-        if (page < 0) {
-            page = 0;
-        }
-        int size = 5;
-        Pageable pageable = PageRequest.of(page, size, Sort.by(Sort.Direction.DESC, "ngayTao"));
+    public String hienThiSanPham(
+            @RequestParam(defaultValue = "0") int page,
+            @RequestParam(required = false) String keyword,
+            @RequestParam(required = false) @DateTimeFormat(pattern = "yyyy-MM-dd") LocalDate startDate,
+            @RequestParam(required = false) @DateTimeFormat(pattern = "yyyy-MM-dd") LocalDate endDate,
+            @RequestParam(required = false) Integer idDanhMuc,
+            @RequestParam(required = false) Integer idChatLieu,
+            @RequestParam(required = false) Integer idHang,
+            Model model) {
 
-        // Xử lý logic mặc định cho ngày
-        Date now = new Date();
-        Calendar cal = Calendar.getInstance();
+        // Xử lý keyword
 
+        String searchKeyword = (keyword != null && !keyword.trim().isEmpty()) ? "%" + keyword.trim() + "%" : null;
+
+        // Xử lý ngày tháng
         if (startDate != null && endDate == null) {
-            endDate = now;
+            endDate = LocalDate.now();
         } else if (endDate != null && startDate == null) {
-            cal.setTime(endDate);
-            cal.add(Calendar.DATE, -30);
-            startDate = cal.getTime();
+            startDate = endDate.minusMonths(1);
         }
-        List<Hang> lstHang = hangService.getAllHangs();
-        List<DanhMuc> lstDanhMuc = danhMucService.getAllDanhMucs();
-        List<ChatLieu> lstChatLieu = chatLieuService.getAllChatLieus();
-        Page<SanPham> lstSanPham = sanPhamService.searchSanPham(keyword, startDate, endDate, pageable);
 
-        // Truyền lại dữ liệu tìm kiếm cho view
+
+        // Lấy danh sách cho dropdown
+        model.addAttribute("lstDanhMuc", danhMucService.getAllDanhMucs());
+        model.addAttribute("lstChatLieu", chatLieuService.getAllChatLieus());
+        model.addAttribute("lstHang", hangService.getAllHangs());
+
+        // Thực hiện lọc
+        Page<SanPham> pageSanPham = sanPhamService.filterSanPham(
+                searchKeyword, startDate, endDate,
+                idDanhMuc, idChatLieu, idHang,
+                page, 10 // Số lượng item mỗi trang
+        );
+        // Đưa dữ liệu vào model
+        model.addAttribute("lstSanPham", pageSanPham.getContent());
+        model.addAttribute("currentPage", pageSanPham.getNumber());
+        model.addAttribute("totalPages", pageSanPham.getTotalPages());
         model.addAttribute("keyword", keyword);
         model.addAttribute("startDate", startDate);
         model.addAttribute("endDate", endDate);
-        model.addAttribute("lstHang", lstHang);
-        model.addAttribute("lstDanhMuc", lstDanhMuc);
-        model.addAttribute("lstChatLieu", lstChatLieu);
-        if (lstSanPham.isEmpty()) {
-            model.addAttribute("message", "Không tìm thấy sản phẩm.");
-        }
-
-        model.addAttribute("lstSanPham", lstSanPham.getContent());
-        model.addAttribute("currentPage", lstSanPham.getNumber());
-        model.addAttribute("totalPages", lstSanPham.getTotalPages());
+        model.addAttribute("idDanhMuc", idDanhMuc);
+        model.addAttribute("idChatLieu", idChatLieu);
+        model.addAttribute("idHang", idHang);
 
         return "admin/sanpham/listSanPham";
     }
+
     @PostMapping("/update-status")
     @ResponseBody
-    public ResponseEntity<?> updateStatus(@RequestParam("id")int id,@RequestParam("status")boolean status) {
+    public ResponseEntity<?> updateStatus(@RequestParam("id") int id, @RequestParam("status") boolean status) {
         SanPham sanPham = sanPhamService.findById(id);
-        if(sanPham == null) {
-            return ResponseEntity.badRequest().body(Collections.singletonMap("message","Không tìm thấy sản phẩm"));
+        if (sanPham == null) {
+            return ResponseEntity.badRequest().body(Collections.singletonMap("message", "Không tìm thấy sản phẩm"));
         }
         sanPham.setTrangThai(status);
         sanPhamService.save(sanPham);
-        return ResponseEntity.ok().body(Collections.singletonMap("message",status?"Mở trạng thái hoạt động":"Tắt trạng thái hoạt động"));
+        return ResponseEntity.ok().body(Collections.singletonMap("message", status ? "Mở trạng thái hoạt động" : "Tắt trạng thái hoạt động"));
 
     }
+
     @GetMapping("/themsanpham")
     public String hienThiFormThem(Model model) {
         model.addAttribute("sanPham", new SanPham()); // Đối tượng rỗng để Thymeleaf bind dữ liệu
@@ -156,7 +175,7 @@ public class SanPhamController {
         // Lưu sản phẩm vào database
         sanPhamService.save(sanPham);
         // Thông báo thành công
-        return ResponseEntity.ok().body(Map.of("message", "Thêm sản phẩm thành công","success",true));
+        return ResponseEntity.ok().body(Map.of("message", "Thêm sản phẩm thành công", "success", true));
 
     }
 
@@ -226,71 +245,101 @@ public class SanPhamController {
 
     @PostMapping("/addctsanpham/{id}")
     @ResponseBody
-    public ResponseEntity<?> themChiTietSanPham(@PathVariable("id") int idSanPham,
-                                                @RequestParam("img") MultipartFile img,
-                                                @RequestParam("idSize") int idSize,
-                                                @RequestParam("idMauSac") int idMauSac,
-                                                @RequestParam("trongLuong") float trongLuong,
-                                                @RequestParam("giaNhap") float giaNhap,
-                                                @RequestParam("giaBan") float giaBan,
-                                                @RequestParam("soLuong") int soLuong,
-                                                @RequestParam(value = "moTa", required = false) String moTa) {
+    public ResponseEntity<?> themChiTietSanPham(
+            @PathVariable("id") int idSanPham,
+            @RequestParam("img") MultipartFile[] imgs, // Thay đổi từ MultipartFile sang MultipartFile[]
+            @RequestParam("idSize") int idSize,
+            @RequestParam("idMauSac") int idMauSac,
+            @RequestParam("trongLuong") float trongLuong,
+            @RequestParam("giaNhap") float giaNhap,
+            @RequestParam("giaBan") float giaBan,
+            @RequestParam("soLuong") int soLuong,
+            @RequestParam(value = "moTa", required = false) String moTa) {
+
         try {
             List<ChiTietSanPham> lstCTSP = chiTietSanPhamService.findByIdSanPham(idSanPham);
+
+            // Kiểm tra Size và Màu sắc
             if (sizeService.findById(idSize) == null) {
                 return ResponseEntity.badRequest().body(Map.of("message", "Size không tồn tại"));
             }
             if (mauSacService.findById(idMauSac) == null) {
                 return ResponseEntity.badRequest().body(Map.of("message", "Màu sắc không tồn tại"));
             }
-            String fileName = null;
-            List<String> paths = new ArrayList<>();
-            if (!img.isEmpty()) {
-                // Lưu file vào thư mục static/images
-                fileName = img.getOriginalFilename();
-                String uploadDir = "src/main/resources/static/images/";
-// Tạo thư mục nếu chưa tồn tại
-                File dir = new File(uploadDir);
-                if (!dir.exists()) {
-                    dir.mkdirs();
-                }
-                Path path = Paths.get(uploadDir + fileName);
-                try {
-                    Files.copy(img.getInputStream(), path, StandardCopyOption.REPLACE_EXISTING);
-                    paths.add(fileName); // Lưu đường dẫn ảnh để lưu DB
-                } catch (IOException e) {
-                    e.printStackTrace();
-                }
-                // Ghép đường dẫn ảnh thành 1 chuỗi (ngăn cách bởi ,)
+
+            // Xử lý lưu nhiều ảnh
+            List<String> imagePaths = new ArrayList<>();
+            if (imgs == null || imgs.length == 0) {
+                return ResponseEntity.badRequest().body(Map.of(
+                        "message", "Vui lòng chọn ít nhất 1 ảnh",
+                        "success", false
+                ));
             }
-            String allImages = ("/images/" + fileName);
+            if (imgs.length > 5) {
+                return ResponseEntity.badRequest().body(Map.of(
+                        "message", "Chỉ được upload tối đa 5 ảnh",
+                        "success", false
+                ));
+            }
+            for (MultipartFile img : imgs) {
+                if (!img.isEmpty()) {
+                    String fileName = System.currentTimeMillis() + "_" + img.getOriginalFilename(); // Tránh trùng tên
+                    String uploadDir = "src/main/resources/static/images/";
+
+                    // Tạo thư mục nếu chưa tồn tại
+                    File dir = new File(uploadDir);
+                    if (!dir.exists()) {
+                        dir.mkdirs();
+                    }
+
+                    // Lưu file vào thư mục
+                    Path path = Paths.get(uploadDir + fileName);
+                    Files.copy(img.getInputStream(), path, StandardCopyOption.REPLACE_EXISTING);
+                    imagePaths.add("/images/" + fileName); // Lưu đường dẫn ảnh
+                }
+            }
+
+            // Ghép các đường dẫn ảnh thành chuỗi (ngăn cách bằng dấu phẩy)
+            String allImages = String.join(",", imagePaths);
+
+            // Kiểm tra trùng lặp (Size + Màu sắc)
+            for (ChiTietSanPham ct : lstCTSP) {
+                if (ct.getIdSize().getId() == idSize && ct.getIdMauSac().getId() == idMauSac) {
+                    return ResponseEntity.badRequest().body(Map.of(
+                            "message", "Sản phẩm đã tồn tại",
+                            "success", false
+                    ));
+                }
+            }
+
+            // Tạo mới ChiTietSanPham
             ChiTietSanPham ctsp = new ChiTietSanPham();
             ctsp.setIdSanPham(sanPhamService.findById(idSanPham));
             ctsp.setIdSize(sizeService.findById(idSize));
             ctsp.setIdMauSac(mauSacService.findById(idMauSac));
-            if (lstCTSP.size() > 0) {
-                for (ChiTietSanPham ct : lstCTSP) {
-                    if (ct.getIdSize().getId() == idSize
-                            && ct.getIdMauSac().getId() == idMauSac) {
-                        return ResponseEntity.badRequest().body(Map.of("message", "Sản phẩm đã tồn tại", "success", false));
-                    }
-                }
-            }
             ctsp.setTrongLuong(trongLuong);
             ctsp.setGiaNhap(giaNhap);
             ctsp.setGiaBan(giaBan);
             ctsp.setSoLuong(soLuong);
-            ctsp.setHinhAnh(allImages);
+            ctsp.setHinhAnh(allImages); // Lưu chuỗi đường dẫn ảnh
             ctsp.setMoTa(moTa);
             ctsp.setNgayTao(new Date());
             ctsp.setNgaySua(new Date());
             ctsp.setTrangThai(true);
-            chiTietSanPhamService.saveChiTietSanPham(ctsp);
-            return ResponseEntity.ok().body(Map.of("message", "Thêm sản phẩm thành công", "success", true));
-        } catch (Exception e) {
-            return ResponseEntity.badRequest().body(Map.of("message", "Thêm sản phẩm thất bại", "success", false));
-        }
 
+            chiTietSanPhamService.saveChiTietSanPham(ctsp);
+
+            return ResponseEntity.ok().body(Map.of(
+                    "message", "Thêm sản phẩm thành công",
+                    "success", true
+            ));
+        } catch (Exception e) {
+            e.printStackTrace();
+            return ResponseEntity.badRequest().body(Map.of(
+                    "message", "Thêm sản phẩm thất bại: " + e.getMessage(),
+                    "success", false
+            ));
+        }
     }
 
     @GetMapping("/chitietsanpham/fragment/{id}")
@@ -311,8 +360,38 @@ public class SanPhamController {
     }
 
 
-    @PutMapping("/updateCTSP/{id}")
-    public ResponseEntity<?> updateChiTietSanPham(@PathVariable int id, @RequestBody Map<String, Object> chiTietSanPham) {
+    @GetMapping("/getSizeByMau/{id}")
+    @ResponseBody
+    public ResponseEntity<List<Size>> getSizeByMau(@PathVariable("id") int idSP, @RequestParam("idMau") int idMau) {
+        List<ChiTietSanPham> lstChiTietSanPham = chiTietSanPhamService.findByIdSanPham(idSP);
+
+        //Lấy ra các size đã có màu dược truyền vào
+        Set<Integer> sizeDaCo = lstChiTietSanPham.stream()
+                .filter(ctsp -> ctsp.getIdMauSac().getId() == idMau)
+                .map(ctsp -> ctsp.getIdSize().getId())
+                .collect(Collectors.toSet());
+        List<Size> lstSize = sizeService.findAll();
+
+        List<Size> lstSizeChuaCo = lstSize.stream()
+                .filter(size -> !sizeDaCo.contains(size.getId()))
+                .collect(Collectors.toList());
+        return ResponseEntity.ok(lstSizeChuaCo);
+    }
+
+    @PostMapping("/updateCTSPWithImage/{id}")
+    @ResponseBody
+    public ResponseEntity<?> updateChiTietSanPhamWithImage(
+            @PathVariable int id,
+            @RequestParam("idSize") int idSize,
+            @RequestParam("idMauSac") int idMauSac,
+            @RequestParam("trongLuong") Float trongLuong,
+            @RequestParam("giaNhap") Float giaNhap,
+            @RequestParam("giaBan") Float giaBan,
+            @RequestParam("soLuong") int soLuong,
+            @RequestParam(value = "moTa", required = false) String moTa,
+            @RequestParam("trangThai") boolean trangThai,
+            @RequestParam(value = "hinhAnhFiles", required = false) MultipartFile[] hinhAnhFiles
+    ) {
         try {
             // Tìm sản phẩm theo ID
             ChiTietSanPham ctsp = chiTietSanPhamService.findById(id);
@@ -322,86 +401,217 @@ public class SanPhamController {
                         .body(Collections.singletonMap("message", "Không tìm thấy sản phẩm!"));
             }
             List<ChiTietSanPham> lstCTSP = chiTietSanPhamService.findByIdSanPham(ctsp.getIdSanPham().getId());
-
-            // Ép kiểu dữ liệu an toàn
-            int idSize = convertToInt(chiTietSanPham.get("idSize"));
-            int idMauSac = convertToInt(chiTietSanPham.get("idMauSac"));
             for (ChiTietSanPham ct : lstCTSP) {
-                // Nếu không phải bản ghi đang cập nhật thì mới check
-                if (ctsp.getId() != ct.getId() && ct.getIdSize().getId() == idSize
-                        && ct.getIdMauSac().getId() == idMauSac) {
+                if (ct.getId() != ctsp.getId() && ct.getIdSize().getId() == idSize && ct.getIdMauSac().getId() == idMauSac) {
                     return ResponseEntity.badRequest().body(Map.of("message", "Chi tiết sản phẩm đã tồn tại", "success", false));
                 }
             }
-            Float trongLuong = convertToFloat(chiTietSanPham.get("trongLuong"));
-            Float giaNhap = convertToFloat(chiTietSanPham.get("giaNhap"));
-            Float giaBan = convertToFloat(chiTietSanPham.get("giaBan"));
-            Integer soLuong = convertToInt(chiTietSanPham.get("soLuong"));
-            String moTa = (chiTietSanPham.get("moTa") != null) ? chiTietSanPham.get("moTa").toString() : "";
-            Boolean trangThai = (chiTietSanPham.get("trangThai") != null) ?
-                    Boolean.parseBoolean(chiTietSanPham.get("trangThai").toString()) : false;
+            if (giaNhap <= 0 || giaBan <= 0 || soLuong <= 0 || trongLuong <= 0) {
+                return ResponseEntity.badRequest().body(Map.of("message", "Giá trị nhập vào phải lớn hơn 0"));
+            }
             ctsp.setIdSize(sizeService.findById(idSize));
             ctsp.setIdMauSac(mauSacService.findById(idMauSac));
-
-            if (giaNhap <= 0 || giaBan <= 0 || soLuong <= 0 || trongLuong <= 0) {
-                return ResponseEntity.badRequest().body(Collections.singletonMap("message", "Giá trị nhập vào phải lớn hơn 0"));
-            }
-            ctsp.setTrongLuong((trongLuong != null) ? trongLuong : 0.0f);
-            ctsp.setGiaNhap((giaNhap != null) ? giaNhap : 0.0f);
-            ctsp.setGiaBan((giaBan != null) ? giaBan : 0.0f);
-            ctsp.setSoLuong((soLuong != null) ? soLuong : 0);
-            ctsp.setMoTa(moTa);
+            ctsp.setTrongLuong(trongLuong);
+            ctsp.setGiaNhap(giaNhap);
+            ctsp.setGiaBan(giaBan);
+            ctsp.setSoLuong(soLuong);
+            ctsp.setMoTa(moTa != null ? moTa : "");
             ctsp.setTrangThai(trangThai);
             ctsp.setNgaySua(new Date());
+            ;
+            // Xử lý ảnh nếu có
+            if (hinhAnhFiles != null && hinhAnhFiles.length > 0) {
+                List<String> newImagePaths = new ArrayList<>();
+
+                // Lưu các ảnh mới
+                for (MultipartFile file : hinhAnhFiles) {
+                    if (!file.isEmpty()) {
+                        String fileName = UUID.randomUUID() + "_" + file.getOriginalFilename();
+                        Path path = Paths.get("src/main/resources/static/images/" + fileName);
+                        Files.copy(file.getInputStream(), path, StandardCopyOption.REPLACE_EXISTING);
+                        newImagePaths.add("/images/" + fileName);
+                    }
+                }
+
+                // Kết hợp với ảnh cũ (nếu muốn giữ lại)
+                // Hoặc chỉ lưu ảnh mới: ctsp.setHinhAnh(String.join(",", newImagePaths));
+                String currentImages = ctsp.getHinhAnh();
+                if (currentImages != null && !currentImages.isEmpty()) {
+                    newImagePaths.addAll(Arrays.asList(currentImages.split(",")));
+                }
+                ctsp.setHinhAnh(String.join(",", newImagePaths));
+
+            }
             // Gọi service để cập nhật dữ liệu
             chiTietSanPhamService.update(ctsp);
-            return ResponseEntity.ok(Collections.singletonMap("success", true));
+            return ResponseEntity.ok(Map.of("message", "Cập nhật sản phẩm thành công", "success", true));
         } catch (Exception e) {
             e.printStackTrace();
-            return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR)
+            return ResponseEntity.badRequest()
                     .body(Collections.singletonMap("message", "Lỗi khi cập nhật sản phẩm!"));
         }
     }
 
 
-    private int convertToInt(Object value) {
-        try {
-            if (value instanceof Number) {
-                return ((Number) value).intValue();
-            }
-            return Integer.parseInt(value.toString());
-        } catch (NumberFormatException e) {
-            return 0; // hoặc có thể ném ngoại lệ tùy vào yêu cầu của bạn
-        }
-    }
-
-    @GetMapping("/createProductValidations")
+    @PostMapping("/them-bien-the")
     @ResponseBody
-    public ResponseEntity<?> createProdcutValidations(@RequestParam("idSanPham") int idSanPham) {
+    public ResponseEntity<?> themBienThe(
+            @RequestParam("idSanPham") int idSanPham,
+            @RequestParam("idMauSac") int idMauSac,
+            @RequestParam("hinhAnh") List<MultipartFile> hinhAnh,
+            @RequestParam Map<String, String> params) {
 
         try {
-            ArrayList<ChiTietSanPham> chiTietSanPhams = sanPhamService.createProductValidations(idSanPham);
-            return ResponseEntity.ok().body(Map.of("success", "Thêm sản phẩm thanh công"));
-        } catch (Exception e) {
-            e.printStackTrace();
-        }
-        return ResponseEntity.badRequest().body(Map.of("message", "Tất cả sản phẩm đều đã được tạo"));
-    }
-    // Hàm hỗ trợ chuyển đổi kiểu dữ liệu an toàn
+            List<ChiTietSanPham> lstChiTietSanPham = chiTietSanPhamService.findByIdSanPham(idSanPham);
+            // Kiểm tra sản phẩm và danh sách biến thể hiện tại
+            SanPham sanPham = sanPhamService.findById(idSanPham);
+            MauSac mauSac = mauSacService.findMauSacById(idMauSac);
 
-
-    private float convertToFloat(Object value) {
-        try {
-            if (value instanceof Number) {
-                return ((Number) value).floatValue();
+            if (sanPham == null || mauSac == null) {
+                return ResponseEntity.badRequest().body(Map.of(
+                        "success", false,
+                        "message", "Không tìm thấy sản phẩm hoặc màu sắc"
+                ));
             }
-            return Float.parseFloat(value.toString());
 
-        } catch (NumberFormatException e) {
-            return 0;
+            // Kiểm tra ảnh
+            if (hinhAnh == null || hinhAnh.isEmpty() || hinhAnh.get(0).isEmpty()) {
+                return ResponseEntity.badRequest().body(Map.of(
+                        "success", false,
+                        "message", "Vui lòng chọn ít nhất 1 ảnh"
+                ));
+            }
+
+            List<ChiTietSanPham> lstCTSPNew = new ArrayList<>();
+            int index = 0;
+
+            while (true) {
+                String idSizeKey = "sizes[" + index + "].idSize";
+                String giaNhapKey = "sizes[" + index + "].giaNhap";
+                String giaBanKey = "sizes[" + index + "].giaBan";
+                String soLuongKey = "sizes[" + index + "].soLuong";
+                String trongLuongKey = "sizes[" + index + "].trongLuong";
+                if (!params.containsKey(idSizeKey)) break;
+
+                try {
+                    int idSize = Integer.parseInt(params.get(idSizeKey));
+                    float giaNhap = Float.parseFloat(params.get(giaNhapKey));
+                    float giaBan = Float.parseFloat(params.get(giaBanKey));
+                    int soLuong = Integer.parseInt(params.get(soLuongKey));
+                    float trongLuong = Float.parseFloat(params.get(trongLuongKey));
+                    // Kiểm tra size có tồn tại không
+                    Size size = sizeService.findById(idSize);
+                    if (size == null) {
+                        return ResponseEntity.badRequest().body(Map.of(
+                                "success", false,
+                                "message", "Size không tồn tại ở dòng " + (index + 1)
+                        ));
+                    }
+
+                    // Kiểm tra trùng biến thể
+                    boolean isExist = lstChiTietSanPham.stream()
+                            .anyMatch(ctsp -> ctsp.getIdSanPham().getId() == idSanPham && ctsp.getIdSize().getId() == idSize && ctsp.getIdMauSac().getId() == idMauSac);
+
+                    if (isExist) {
+                        return ResponseEntity.badRequest().body(Map.of(
+                                "success", false,
+                                "message", "Biến thể đã tồn tại (Size: " + size.getTenSize() + ")"
+                        ));
+                    }
+
+                    // Tạo mới ChiTietSanPham
+                    ChiTietSanPham chiTietSanPham = new ChiTietSanPham();
+                    chiTietSanPham.setIdSanPham(sanPham);
+                    chiTietSanPham.setIdMauSac(mauSac);
+                    chiTietSanPham.setIdSize(size);
+                    chiTietSanPham.setGiaNhap(giaNhap);
+                    chiTietSanPham.setGiaBan(giaBan);
+                    chiTietSanPham.setSoLuong(soLuong);
+                    chiTietSanPham.setTrongLuong(trongLuong);
+                    chiTietSanPham.setTrangThai(true);
+                    chiTietSanPham.setNgayTao(new Date());
+                    chiTietSanPham.setNgaySua(new Date());
+
+                    // Xử lý lưu ảnh
+                    List<String> imagePaths = new ArrayList<>();
+                    for (MultipartFile file : hinhAnh) {
+                        if (!file.isEmpty()) {
+                            // Validate file
+                            if (file.getSize() > 5 * 1024 * 1024) {
+                                return ResponseEntity.badRequest().body(Map.of(
+                                        "success", false,
+                                        "message", "Ảnh " + file.getOriginalFilename() + " vượt quá 5MB"
+                                ));
+                            }
+
+                            String contentType = file.getContentType();
+                            if (contentType == null ||
+                                    (!contentType.equals("image/jpeg") &&
+                                            !contentType.equals("image/jpg") &&
+                                            !contentType.equals("image/png"))) {
+                                return ResponseEntity.badRequest().body(Map.of(
+                                        "success", false,
+                                        "message", "Chỉ chấp nhận ảnh JPG/PNG"
+                                ));
+                            }
+
+                            String fileName = UUID.randomUUID() + "_" + file.getOriginalFilename();
+                            Path path = Paths.get("src/main/resources/static/images/" + fileName);
+                            Files.createDirectories(path.getParent());
+                            Files.copy(file.getInputStream(), path, StandardCopyOption.REPLACE_EXISTING);
+                            imagePaths.add("/images/" + fileName);
+                        }
+                    }
+
+                    chiTietSanPham.setHinhAnh(String.join(",", imagePaths));
+
+                    // Thêm mô tả
+                    NhanVien nhanVien = nhanVienService.getNhanVienByEmail(getCurrentUserEmail());
+                    String moTa = "Thêm mới bởi " + nhanVien.getHoVaTen() + " vào " +
+                            new SimpleDateFormat("dd/MM/yyyy HH:mm").format(new Date());
+                    chiTietSanPham.setMoTa(moTa);
+
+                    lstCTSPNew.add(chiTietSanPham);
+
+                } catch (NumberFormatException e) {
+                    return ResponseEntity.badRequest().body(Map.of(
+                            "success", false,
+                            "message", "Dữ liệu không hợp lệ ở dòng " + (index + 1)
+                    ));
+                } catch (IOException e) {
+                    return ResponseEntity.badRequest().body(Map.of(
+                            "success", false,
+                            "message", "Lỗi khi lưu ảnh"
+                    ));
+                }
+
+                index++;
+            }
+
+            // Kiểm tra nếu không có dòng nào hợp lệ
+            if (lstCTSPNew.isEmpty()) {
+                return ResponseEntity.badRequest().body(Map.of(
+                        "success", false,
+                        "message", "Không có biến thể nào được thêm"
+                ));
+            }
+
+            // Lưu danh sách vào DB
+            for (ChiTietSanPham ct : lstCTSPNew) {
+                chiTietSanPhamService.saveChiTietSanPham(ct);
+            }
+            return ResponseEntity.ok().body(Map.of(
+                    "success", true,
+                    "message", "Thêm thành công " + lstCTSPNew.size() + " biến thể"
+            ));
+
+        } catch (Exception ex) {
+            ex.printStackTrace();
+            return ResponseEntity.internalServerError().body(Map.of(
+                    "success", false,
+                    "message", "Lỗi hệ thống: " + ex.getMessage()
+            ));
         }
-
     }
-
 
 }
